# uv_workspaces_example

./: README.md  main.py  pyproject.toml
services/data_ingestion/: README.md  pyproject.toml
services/data_ingestion/data_ingest/: main.py
services/data_preprocessing/: README.md  pyproject.toml
services/data_preprocessing/data_pre/: main.py
